Fixed a modal layout issue

--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ ion-icon {
   color: white;
   /*background-color: #2b2a2a;*/
   background-color: #242524;
-  height: 20rem;
+  height: 30rem;
   width: 25rem;
   margin-bottom: 15rem;
   padding: 3rem;
